Fix admin gui layout on small screens

--- a/src/static/css/application.css
+++ b/src/static/css/application.css
@@ -7,7 +7,6 @@ html, body {
 }
 
 body {
-  padding-top: 70px;
   --bs-body-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   --bs-body-font-size: 14px;
 }
